# AutoEncoder-CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
checkpoints/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER.md  OPTIMIZATION_GUIDE.md  README.md  USER_GUIDE.md
notebooks/: colab.ipynb  report.ipynb  submission.ipynb
scripts/: benchmark.sh  download_cifar10.sh  download_weights.sh  plot_results.py
src/: main.cpp  main_gpu.cpp  main_inference.cpp
src/benchmarking/: comparator.cpp  comparator.h  profiler.cpp  profiler.h
src/config/: gpu_config.cpp  gpu_config.h
src/cpu/data/: cifar_loader.cpp  cifar_loader.h
src/cpu/evaluation/: cifar10_constants.h  metrics.cpp  metrics.h  visualizer.cpp  visualizer.h
src/cpu/layers/: conv2d.cpp  conv2d.h  maxpool.cpp  maxpool.h  mse_loss.cpp  mse_loss.h  relu.cpp  relu.h  upsample.cpp  upsample.h
src/cpu/model/: autoencoder.cpp  autoencoder.h
src/cpu/training/: trainer.cpp  trainer.h
src/gpu/core/: cuda_utils.h  device_reset.cu  device_reset.h  kernel_config.h  layout_convert.cu  layout_convert.h  memory.cu  memory.h  mixed_precision.cu  mixed_precision.h
src/gpu/inference/: feature_extractor.cu  feature_extractor.h
src/gpu/kernels/backward/: activation.cu  conv2d.cu  optimizer.cu  pooling.cu
src/gpu/kernels/forward/: activation.cu  conv2d.cu  loss.cu  pooling.cu
src/gpu/kernels/gemm/: conv_gemm.cu  conv_gemm.h  im2col.cu  im2col.h
src/gpu/model/: autoencoder.cu  autoencoder.h  backward_pass.cu  forward_pass.cu
src/gpu/svm/: svm.cpp  svm.h
src/utils/: logger.cpp  logger.h  timer.cpp  timer.h
